k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wiki
  labels:
    app: public-wiki
