k8s/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: public-wiki
  namespace: wiki
  labels:
    app: public-wiki
spec:
  replicas: 3 # default, will be overridden by overlays
  selector:
    matchLabels:
      app: public-wiki
  template:
    metadata:
      labels:
        app: public-wiki
    spec:
      containers:
      - name: public-wiki
        image: IMAGE_TAG # will be replaced by kustomize
        ports:
        - containerPort: 3000
