k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: public-wiki
spec:
  selector:
    app: public-wiki
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
