k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-wiki-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - PLACEHOLDER_HOST # will be patched in overlays
    secretName: PLACEHOLDER_TLS_SECRET # will be patched in overlays
  rules:
  - host: PLACEHOLDER_HOST # will be patched in overlays
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: public-wiki
            port:
              number: 80
